src/styles/homepage/about-section.css
.icon-title > h2{
    margin-top: 5%
}

@media (max-width: 768px){
    .wie{
        margin: 0 5%;
    }

    .wie-content{
        margin-bottom: 5%;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        gap: 5px;
    }

    .about-top{
        display: flex;
        flex-direction: column-reverse;
        align-items: center;
        justify-content: center;
    }

    .icon-title{
        display: flex;
        justify-content: center;
        gap: 10px;
    }

    .center-link{
        align-self: center;

    }
}

